--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>glyphaj - Profile</title>
+    <title>@glyphaj | guns.lol</title>
     <meta name="description" content="glyphaj's  profile - Owner, Verified, Bug Hunter">
     <meta property="og:title" content="@glyphaj | guns.lol">
     <meta property="og:description" content="Create feature-rich, customizable and modern link-in-bio pages with guns.lol.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/glyphaj1/glyph.lol.github.io/refs/heads/main/images/guns_banner_embed.webp">
+    <meta property="og:image" content="https://assets.guns.lol/guns_banner_embed.png">
     <meta property="og:url" content="https://guns.lol/glyphaj">
     <meta property="og:type" content="website">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>/̵͇̿̿/'̿'̿ ̿ ̿̿</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>✅</text></svg>">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
