--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>glyphaj - Profile</title>
-    <meta name="description" content="glyphaj's personal profile - Developer, Security Researcher, Bug Hunter">
-    <meta property="og:title" content="glyphaj - Profile">
-    <meta property="og:description" content="Developer, Security Researcher & Bug Hunter - Check out my profile!">
-    <meta property="og:image" content="https://via.placeholder.com/1200x630/0a0a0a/ffffff?text=glyphaj">
-    <meta property="og:url" content="https://yoursite.com">
+    <title>@glyphaj | guns.lol</title>
+    <meta name="description" content="Owner, Verified Account & Bug Hunter - Check out my profile">
+    <meta property="og:title" content="@glyphaj | guns.lol">
+    <meta property="og:description" content="Owner, Verified Account & Bug Hunter - Check out my profile!">
+    <meta property="og:image" content="https://assets.guns.lol/guns_banner_embed.png">
+    <meta property="og:url" content="https://glyphaj1.github.io/glyph.lol.github.io/">
     <meta property="og:type" content="website">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👑</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>✅</text></svg>">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
@@ -782,4 +783,3 @@
     </script>
 </body>
 </html>
-
