--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@ body {
         });
 
         function updateVisitorDisplay() {
-            fetch("https://hits.seeyoufarm.com/api/count/incr?url=https://glyphaj1.github.io/glyph.lol.github.io/")
+            fetch("https://hits.seeyoufarm.com/api/count/incr?url=https://glyph-lol-github-io.vercel.app/")
                 .then(response => response.json())
                 .then(data => {
                     visitorCount.textContent = data.value.toLocaleString()
